Refactor to change visibility